# OCC-club-recruitment-gen

./: Cargo.toml  README.md  run.sh
src/: args.rs  main.rs  state.rs  ui.rs
