[package]
name = "occ-recruitment-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
qrcode = "0.12"
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"